# teste

./: README.md  calculadora.py  exercicio001.py  pyproject.toml
simplepygui/: __init__.py
simplepygui.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
