[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simplepygui"
version = "0.1.0"
description = "Minimal floatbox GUI library for simple Python apps."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["gui", "floatbox", "tkinter", "simple"]

[tool.setuptools.packages.find]
where = ["."]
include = ["simplepygui*"]
